--- a/AJDENTITY/AJDENTITY/Views/Messages/Delete.cshtml
+++ b/AJDENTITY/AJDENTITY/Views/Messages/Delete.cshtml
@@ -27,6 +27,14 @@
             @Html.DisplayFor(model => model.SendDate)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.AspNetUser.Email)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.AspNetUser.Email)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
