--- a/AJDENTITY/AJDENTITY/Views/Messages/Details.cshtml
+++ b/AJDENTITY/AJDENTITY/Views/Messages/Details.cshtml
@@ -26,9 +26,17 @@
             @Html.DisplayFor(model => model.SendDate)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.AspNetUser.Email)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.AspNetUser.Email)
+        </dd>
+
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
