--- a/AJDENTITY/AJDENTITY/Views/Students/Delete.cshtml
+++ b/AJDENTITY/AJDENTITY/Views/Students/Delete.cshtml
@@ -36,11 +36,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Account.Email)
+            @Html.DisplayNameFor(model => model.AspNetUser.Email)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Account.Email)
+            @Html.DisplayFor(model => model.AspNetUser.Email)
         </dd>
 
         <dt>
