--- a/AJDENTITY/AJDENTITY/Views/Classes/Edit.cshtml
+++ b/AJDENTITY/AJDENTITY/Views/Classes/Edit.cshtml
@@ -15,7 +15,7 @@
         <h4>Class</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.ID)
+        @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
             @Html.LabelFor(model => model.ClassName, htmlAttributes: new { @class = "control-label col-md-2" })
