--- a/AJDENTITY/AJDENTITY/Views/Students/Details.cshtml
+++ b/AJDENTITY/AJDENTITY/Views/Students/Details.cshtml
@@ -35,11 +35,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Account.Email)
+            @Html.DisplayNameFor(model => model.AspNetUser.Email)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Account.Email)
+            @Html.DisplayFor(model => model.AspNetUser.Email)
         </dd>
 
         <dt>
@@ -61,6 +61,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
