--- a/AJDENTITY/AJDENTITY/Views/Teachers/Create.cshtml
+++ b/AJDENTITY/AJDENTITY/Views/Teachers/Create.cshtml
@@ -16,10 +16,10 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Account_ID, "Account_ID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Account_Id, "Account_Id", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("Account_ID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Account_ID, "", new { @class = "text-danger" })
+                @Html.DropDownList("Account_Id", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Account_Id, "", new { @class = "text-danger" })
             </div>
         </div>
 
