--- a/AJDENTITY/AJDENTITY/Views/Shared/_Layout.cshtml
+++ b/AJDENTITY/AJDENTITY/Views/Shared/_Layout.cshtml
@@ -37,21 +37,21 @@
                         }
 
                         @if (User.IsInRole("Nauczyciel")) {
-                            // Wystawianie ocen
-                            // Wiadomosci do rodzicow
-                            // Przedmioty (edycja programu nauczania)
-                            // Edycja danych osobowych
+                            <li>@Html.ActionLink("Moje Klasy", "", "")</li>
+                            <li>@Html.ActionLink("Moje Przedmioty", "", "")</li>
+                            <li>@Html.ActionLink("Skrzynka pocztowa", "", "")</li>
+                            <li>@Html.ActionLink("Edytuj profil", "", "")</li>
                         }
 
                         @if (User.IsInRole("Rodzic")) {
                             <li>@Html.ActionLink("Moje dzieci", "Index", "MojeDzieci")</li>
-                            // Wiadomosci do nauczycieli
-                            // Edycja danych osobowych
+                            <li>@Html.ActionLink("Skrzynka pocztowa", "", "")</li>
+                            <li>@Html.ActionLink("Edytuj profil", "", "")</li>
                         }
 
                         @if (User.IsInRole("Uczen")) {
-                            // Sprawdzanie swoich ocen
-                            // Edycja danych osobowych
+                            <li>@Html.ActionLink("Moje Przedmioty", "", "")</li>
+                            <li>@Html.ActionLink("Edytuj profil", "", "")</li>
                         }
                     </ul>
                     @Html.Partial("_LoginPartial")
