--- a/AJDENTITY/AJDENTITY/Views/Shared/_Layout.cshtml
+++ b/AJDENTITY/AJDENTITY/Views/Shared/_Layout.cshtml
@@ -39,13 +39,15 @@
                         @if (User.IsInRole("Nauczyciel")) {
                             <li>@Html.ActionLink("Moje Klasy", "", "")</li>
                             <li>@Html.ActionLink("Moje Przedmioty", "", "")</li>
-                            <li>@Html.ActionLink("Skrzynka pocztowa", "", "")</li>
+                            <li>@Html.ActionLink("Kontakty", "Index", "KontaktyDoRodzicow")</li>
+
                             <li>@Html.ActionLink("Edytuj profil", "", "")</li>
                         }
 
                         @if (User.IsInRole("Rodzic")) {
                             <li>@Html.ActionLink("Moje dzieci", "Index", "MojeDzieci")</li>
-                            <li>@Html.ActionLink("Skrzynka pocztowa", "", "")</li>
+                            <li>@Html.ActionLink("Kontakty", "Index", "KontaktyDoNauczycieli")</li>
+
                             <li>@Html.ActionLink("Edytuj profil", "", "")</li>
                         }
 
