siema, ja komituje jak cos, ok?

--- a/AJDENTITY/AJDENTITY/Views/MojeKlasyNauczyciel/Index.cshtml
+++ b/AJDENTITY/AJDENTITY/Views/MojeKlasyNauczyciel/Index.cshtml
@@ -29,7 +29,7 @@
             @Html.DisplayFor(modelItem => item.StartDate)
         </td>
         <td>
-            @Html.ActionLink("Zobacz prowadzine przedmioty", "PrzedmiotyDanejKlasy", new { id=item.Id })
+            @Html.ActionLink("Zobacz prowadzone przedmioty", "PrzedmiotyDanejKlasy", new { id=item.Id })
         </td>
     </tr>
 }
