--- a/AJDENTITY/AJDENTITY/Views/Shared/_Layout.cshtml
+++ b/AJDENTITY/AJDENTITY/Views/Shared/_Layout.cshtml
@@ -41,19 +41,19 @@
                             <li>@Html.ActionLink("Moje Przedmioty", "", "")</li>
                             <li>@Html.ActionLink("Kontakty", "Index", "KontaktyDoRodzicow")</li>
 
-                            <li>@Html.ActionLink("Edytuj profil", "", "")</li>
+                            <li>@Html.ActionLink("Edytuj profil", "Edit", "EdytujProfilNauczyciel")</li>
                         }
 
                         @if (User.IsInRole("Rodzic")) {
                             <li>@Html.ActionLink("Moje dzieci", "Index", "MojeDzieci")</li>
                             <li>@Html.ActionLink("Kontakty", "Index", "KontaktyDoNauczycieli")</li>
 
-                            <li>@Html.ActionLink("Edytuj profil", "", "")</li>
+                            <li>@Html.ActionLink("Edytuj profil", "Edit", "EdytujProfilRodzic")</li>
                         }
 
                         @if (User.IsInRole("Uczen")) {
-                            <li>@Html.ActionLink("Moje Przedmioty", "", "")</li>
-                            <li>@Html.ActionLink("Edytuj profil", "", "")</li>
+                            <li>@Html.ActionLink("Moje Przedmioty", "Index", "UczenSubjects")</li>
+                            <li>@Html.ActionLink("Edytuj profil", "Edit", "EdytujProfilUczen")</li>
                         }
                     </ul>
                     @Html.Partial("_LoginPartial")
