--- a/AJDENTITY/AJDENTITY/Views/MojeDzieci/Details.cshtml
+++ b/AJDENTITY/AJDENTITY/Views/MojeDzieci/Details.cshtml
@@ -28,7 +28,7 @@
                 @Html.DisplayFor(modelItem => item.LearningContent)
             </td>
             <td>
-                @Html.ActionLink("Zobacz kurka, oceny swego dziecka", "OcenyDziecka", new { id = item.Id })
+                @Html.ActionLink("Wyswietl oceny dziecka", "OcenyDziecka", new { id = item.Id })
 
             </td>
         </tr>
