--- a/AJDENTITY/AJDENTITY/Views/MojeKlasyNauczyciel/UczniowieDaneKlasyIPrzedmiotu.cshtml
+++ b/AJDENTITY/AJDENTITY/Views/MojeKlasyNauczyciel/UczniowieDaneKlasyIPrzedmiotu.cshtml
@@ -54,7 +54,7 @@
                 @Html.DisplayFor(modelItem => item.Parent.Name)
             </td>
             <td>
-                @Html.ActionLink("Poka jego oceny", "OcenyUczniaZPrzedmiotu", new { id = item.Id })
+                @Html.ActionLink("Pokaz oceny", "OcenyUczniaZPrzedmiotu", new { id = item.Id })
             </td>
         </tr>
     }
