--- a/AJDENTITY/AJDENTITY/Views/UczenSubjects/Index.cshtml
+++ b/AJDENTITY/AJDENTITY/Views/UczenSubjects/Index.cshtml
@@ -27,7 +27,7 @@
             @Html.DisplayFor(modelItem => item.LearningContent)
         </td>
         <td>
-            @Html.ActionLink("Zobacz kurka swoje oceny", "Details", new { id=item.Id })
+            @Html.ActionLink("Wyświetl swoje oceny", "Details", new { id=item.Id })
            
         </td>
     </tr>
