--- a/AJDENTITY/AJDENTITY/Views/Shared/_LayoutPiekny.cshtml
+++ b/AJDENTITY/AJDENTITY/Views/Shared/_LayoutPiekny.cshtml
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/css3")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
@@ -31,7 +31,6 @@
                         <li><a class="nav-link active" href="/Subjects/Index"> Przedmioty <span class="visually-hidden">(current)</span></a></li>
 
                         <li><a class="nav-link active" href="/Announcements/Index"> Ogłoszenia <span class="visually-hidden">(current)</span></a></li>
-
 
                         <li><a class="nav-link active" href="/ClassSubjectTeachers/Index"> Przedmioty Nauczycieli <span class="visually-hidden">(current)</span></a></li>
 
